--- a/PackageManagementService.Server/appsettings.json
+++ b/PackageManagementService.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-BFV33PDI\\SQLEXPRESS;Database=PackageManagementService;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
