--- a/packagemanagementservice.client/package.json
+++ b/packagemanagementservice.client/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "reactstrap": "^9.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
