My final commit

--- a/PackageManagementService.Server/appsettings.json
+++ b/PackageManagementService.Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-BFV33PDI\\SQLEXPRESS;Database=PackageManagementService;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "server=PABLO-LORENZO\\SQLEXPRESS;Database=PackageManagementService;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
